{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "TileInteraction",
            "id": "8a52daf0-4401-4314-b3b2-7c2aa74c72e7",
            "actions": [
                {
                    "name": "OpenTile",
                    "type": "Button",
                    "id": "3859e904-9f87-4d24-81e6-78b6f2eb7926",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "f8c6649f-4cbf-45ed-bdfb-e3133fdf05ff",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f91d08f2-dec7-4cd9-9f2b-367512482517",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenTile",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f5d02e6-b41d-47f9-9046-492e8ef5bf09",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}